crates/plotnik-tests/tests/04-emit/bytecode/binding/shared_def_non_deferred_use.txt
Bad = arguments: (identifier)

Q = (binary_expression
  [
    (Bad)
    (identifier)
  ]
  (Bad)
)
------------------ DIAGNOSTICS -------------------
error: `arguments` is not a grammar field of `binary_expression`
 --> query.ptk:1:7
  |
1 | Bad = arguments: (identifier)
  |       ^^^^^^^^^
2 |
3 | Q = (binary_expression
  |      ----------------- `binary_expression` starts here
  |
help: valid grammar fields for `binary_expression`: `left`, `operator`, `right`
